--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <nav class="navbar bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="https://i.pinimg.com/736x/85/f0/63/85f063360f15625e86fe4d64ad00535c.jpg" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
+                <img src="images/logo.png" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
                 Welcome to Arki's
             </a>
         </div>
