--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="Logo" width="40" height="34" class="d-inline-block align-text-top">
-                Welcome to Arki's
+                Arki's
             </a>
         </div>
     </nav>
 
     <section class="menu-container">
-        <h1 class="mb-4">MENU</h1>
+        <h1 class="mb-4">Welcome to Arki's</h1>
         
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
